Replace Arrays.asList with Collections.singletonList